--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -30,3 +30,10 @@ jobs:
         run: npm ci
       - name: Run Build
         run: npm run build
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-files
+          path: |
+            dist
+            package.json
