--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -34,6 +34,14 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: dist-files
-          path: |
-            dist
-            package.json
+          path: dist
+  download_artifact:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+      - name: Output content
+        run: ls
