--- a/.github/workflows/actions/cache-deps/action.yml
+++ b/.github/workflows/actions/cache-deps/action.yml
@@ -7,7 +7,7 @@ runs:
       id: cache
       uses: actions/cache@v3
       with:
-        path: ~/.npm
+        path: node_modules
         key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
     - name: Install dependencies
       if: steps.cache.outputs.cache-hit != 'true'
